TinyAuth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth-service
  namespace: tinyauth
spec:
  selector:
    app: tinyauth
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
