TinyAuth/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth-ingress-route
  namespace: tinyauth
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tinyauth-tls
  routes:
    - match: Host(`tinyauth.home.local`)
      kind: Rule
      services:
        - name: tinyauth-service
          port: 3000
